[gd_scene load_steps=44 format=2]

[ext_resource path="res://scripts/main/Home.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/background_plain.png" type="Texture" id=2]
[ext_resource path="res://scenes/main/Player1Grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/main/Player2Grid.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/MainMenu/4-side.png" type="Texture" id=6]
[ext_resource path="res://scenes/main/SwipeDetector.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/MainMenu/power-punch - lightBG.png" type="Texture" id=8]
[ext_resource path="res://art/MainMenu/power-punch - hand.png" type="Texture" id=9]
[ext_resource path="res://art/MainMenu/power-punch - yellow.png" type="Texture" id=10]
[ext_resource path="res://art/sounds/BackgroundSound.ogg" type="AudioStream" id=11]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=12]
[ext_resource path="res://art/MainMenu/fighter_BG.png" type="Texture" id=13]
[ext_resource path="res://art/MainMenu/VS.png" type="Texture" id=14]
[ext_resource path="res://art/MainMenu/Pause.png" type="Texture" id=15]
[ext_resource path="res://art/MainMenu/Sound-off.png" type="Texture" id=16]
[ext_resource path="res://scripts/main/Player.gd" type="Script" id=17]
[ext_resource path="res://art/sounds/StrongPunchSound.wav" type="AudioStream" id=18]
[ext_resource path="res://scenes/Characters/Dragon/DragonCharacter.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Character/Golem/golem.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/Characters/Swardman/SwardmanCharacter.tscn" type="PackedScene" id=21]
[ext_resource path="res://art/MainMenu/Power_health_L.png" type="Texture" id=22]
[ext_resource path="res://art/MainMenu/Health_yellow-black.png" type="Texture" id=23]
[ext_resource path="res://art/MainMenu/Health_green.png" type="Texture" id=24]
[ext_resource path="res://art/MainMenu/Star.png" type="Texture" id=25]
[ext_resource path="res://art/playscreenimg/player_1_1.png" type="Texture" id=26]
[ext_resource path="res://art/MainMenu/Power_health_R.png" type="Texture" id=27]
[ext_resource path="res://art/playscreenimg/player_1.png" type="Texture" id=28]
[ext_resource path="res://scenes/VS screen/VSScreen.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/popup/WaitingOpponent.tscn" type="PackedScene" id=30]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.180392 )
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.996078, 0.792157, 0.113725, 0.113725 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "NumberPadAnimation"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Number:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.19, 0.29, 0.39, 0.49 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0941176 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0941176 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.99 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "FullPower"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 100.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 13
font_data = ExtResource( 4 )

[node name="Home" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -370.186
margin_top = -663.18
margin_right = 379.814
margin_bottom = 670.82
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.351868
margin_top = -0.155273
margin_right = 0.351837
margin_bottom = -0.155273
color = Color( 0, 0, 0, 0.0862745 )

[node name="Grid1" type="Control" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -74.0
margin_right = 92.0
margin_bottom = 302.0
rect_clip_content = true

[node name="ColorRect" type="Panel" parent="Grid1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Player1Grid" parent="Grid1" instance=ExtResource( 3 )]
position = Vector2( 3.2, 32 )
scale = Vector2( 0.5, 0.5 )
offset = 56

[node name="Control" type="Control" parent="Grid1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NextView" type="Control" parent="."]
editor/display_folded = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -43.5
margin_right = 76.0
margin_bottom = 81.5

[node name="Border" type="Panel" parent="NextView"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="NextView"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.2536
margin_top = 5.0
margin_right = 15.7464
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.992157, 0.776471, 0.0117647, 1 )
text = "NEXT"
align = 1
valign = 1

[node name="NextPair" type="Node2D" parent="NextView"]
position = Vector2( 30, 60 )
scale = Vector2( 0.6, 0.6 )

[node name="Grid2" type="Control" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -77.0
margin_top = -43.5
margin_right = -13.0
margin_bottom = 93.5

[node name="Player2Grid" parent="Grid2" instance=ExtResource( 5 )]
position = Vector2( 7, 20 )
scale = Vector2( 0.15, 0.15 )
z_as_relative = false
x_start = 30
y_start = 650
offset = 56

[node name="Border" type="Panel" parent="Grid2"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="side" type="TextureRect" parent="Grid2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -7.5
margin_top = -6.0
margin_right = 7.5
margin_bottom = 8.0
texture = ExtResource( 6 )

[node name="side2" type="TextureRect" parent="Grid2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -7.5
margin_top = -8.0
margin_right = 7.5
margin_bottom = 6.0
texture = ExtResource( 6 )

[node name="CounterNumberPad" type="CanvasLayer" parent="Grid2"]

[node name="ColorRect" type="ColorRect" parent="Grid2/CounterNumberPad"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 0.5
margin_right = -15.0
margin_bottom = 50.5
color = Color( 0, 0, 0, 0.329412 )

[node name="Number" type="Label" parent="Grid2/CounterNumberPad/ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="AnimNumberPad" type="AnimationPlayer" parent="Grid2/CounterNumberPad/ColorRect"]
anims/NumberPadAnimation = SubResource( 6 )

[node name="SwipeDetector" parent="." instance=ExtResource( 7 )]

[node name="SuperPower" type="TextureProgress" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -144.0
margin_right = 15.0
margin_bottom = -29.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 57, 57 )
texture_under = ExtResource( 8 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="SuperPower"]
anims/FullPower = SubResource( 7 )
anims/HeadAnimation = SubResource( 8 )

[node name="btnSupperPower" type="Button" parent="SuperPower"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 57, 57 )
focus_mode = 0
custom_styles/normal = SubResource( 9 )
enabled_focus_mode = 0
flat = true

[node name="Tween" type="Tween" parent="SuperPower"]

[node name="BgSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Normal"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Normal"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 255.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -187.5
margin_right = 187.5
margin_bottom = 255.0
texture = ExtResource( 13 )

[node name="TextureRect" type="TextureRect" parent="Control/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -65.0
margin_right = 138.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="btnPush" type="Button" parent="Control"]
margin_left = 5.0
margin_top = -3.0
margin_right = 117.0
margin_bottom = 103.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 15 )
flat = true

[node name="btnSound" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.406
margin_top = -3.0
margin_right = 43.594
margin_bottom = 103.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 16 )
flat = true

[node name="Player1" type="Control" parent="Control"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
script = ExtResource( 17 )

[node name="Position2D" type="Position2D" parent="Control/Player1"]
position = Vector2( 17.824, 178 )

[node name="StrongPunch" type="AudioStreamPlayer" parent="Control/Player1"]
stream = ExtResource( 18 )
bus = "Strong"

[node name="DragonCharacter" parent="Control/Player1" instance=ExtResource( 19 )]
visible = false
position = Vector2( -60, 150 )
scale = Vector2( 0.6, 0.6 )

[node name="golem" parent="Control/Player1" instance=ExtResource( 20 )]
visible = false
position = Vector2( 70, 180 )
scale = Vector2( 0.5, 0.5 )

[node name="Player2" type="Control" parent="Control"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
script = ExtResource( 17 )

[node name="Position2D" type="Position2D" parent="Control/Player2"]
position = Vector2( -15, 178 )

[node name="SwardmanCharacter" parent="Control/Player2" instance=ExtResource( 21 )]
visible = false
position = Vector2( 60, 139 )

[node name="player1Info" type="Control" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_right = 140.0

[node name="Power" type="TextureProgress" parent="Control/player1Info"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -38.0
margin_right = 160.0
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
value = 35.0
texture_progress = ExtResource( 22 )

[node name="Health" type="TextureProgress" parent="Control/player1Info"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_right = 278.0
margin_bottom = -11.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 23 )
texture_progress = ExtResource( 24 )

[node name="Tween" type="Tween" parent="Control/player1Info/Health"]

[node name="VBoxContainer" type="VBoxContainer" parent="Control/player1Info"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = -7.0
margin_bottom = 6.0
custom_constants/separation = -4
alignment = 2

[node name="Name" type="Label" parent="Control/player1Info/VBoxContainer"]
margin_top = 2.0
margin_right = 133.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.992157, 0.776471, 0.0117647, 1 )
text = "John Wick"
align = 2
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/player1Info/VBoxContainer"]
margin_top = 15.0
margin_right = 133.0
margin_bottom = 36.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Control/player1Info/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 49.0
margin_bottom = 21.0
texture = ExtResource( 25 )
stretch_mode = 4

[node name="Level" type="Label" parent="Control/player1Info/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 133.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 11 )
text = "00000000"
align = 2
valign = 1
uppercase = true

[node name="PlayerImg" type="TextureRect" parent="Control/player1Info"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -69.5
margin_right = 87.0
margin_bottom = 104.5
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )

[node name="player2Info" type="Control" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -48.0

[node name="Power" type="TextureProgress" parent="Control/player2Info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -39.0
margin_right = 74.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
value = 35.0
texture_progress = ExtResource( 27 )
fill_mode = 1

[node name="Health" type="TextureProgress" parent="Control/player2Info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -48.0
margin_right = 136.0
margin_bottom = -12.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 23 )
texture_progress = ExtResource( 24 )
fill_mode = 1

[node name="Tween" type="Tween" parent="Control/player2Info/Health"]

[node name="VBoxContainer" type="VBoxContainer" parent="Control/player2Info"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -32.0
margin_right = 75.0
margin_bottom = 4.0
custom_constants/separation = -4
alignment = 2

[node name="Name" type="Label" parent="Control/player2Info/VBoxContainer"]
margin_top = 2.0
margin_right = 99.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.992157, 0.776471, 0.0117647, 1 )
text = "High Table"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/player2Info/VBoxContainer"]
margin_top = 15.0
margin_right = 99.0
margin_bottom = 36.0

[node name="TextureRect" type="TextureRect" parent="Control/player2Info/VBoxContainer/HBoxContainer"]
margin_right = 15.0
margin_bottom = 21.0
texture = ExtResource( 25 )
stretch_mode = 4

[node name="Level" type="Label" parent="Control/player2Info/VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 13 )
text = "00000000"
align = 2
valign = 1
uppercase = true

[node name="TextureRect" type="TextureRect" parent="Control/player2Info"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -70.0
margin_right = 44.0
margin_bottom = 104.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 28 )

[node name="Versus" parent="." instance=ExtResource( 29 )]
visible = false
margin_left = 0.0247191
margin_right = 0.0247192

[node name="WaitingOpponent" parent="." instance=ExtResource( 30 )]
visible = false

[connection signal="GameOver" from="Grid1/Player1Grid" to="." method="_on_Player1Grid_GameOver"]
[connection signal="SendCounterGem" from="Grid1/Player1Grid" to="." method="_on_Player1Grid_SendCounterGem"]
[connection signal="powerGemScore" from="Grid1/Player1Grid" to="." method="_on_Player1Grid_powerGemScore"]
[connection signal="GameOver" from="Grid2/Player2Grid" to="." method="_on_Player2Grid_GameOver"]
[connection signal="SendCounterGem" from="Grid2/Player2Grid" to="." method="_on_Player2Grid_SendCounterGem"]
[connection signal="rotate_tap" from="SwipeDetector" to="." method="_on_SwipeDetector_rotate_tap"]
[connection signal="swiped_down" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_down"]
[connection signal="swiped_left" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_left"]
[connection signal="swiped_right" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped_right"]
[connection signal="pressed" from="SuperPower/btnSupperPower" to="." method="_on_btnSupperPower_pressed"]
[connection signal="pressed" from="Control/btnPush" to="." method="_on_btnPush_pressed"]
[connection signal="pressed" from="Control/btnSound" to="." method="_on_btnSound_pressed"]
